# psycross-hello-world

./: .gitignore  CMakeLists.txt  build_windows.txt  cube.c  psyx_compat.h
cmake/: FindSDL2.cmake
